# mlops-telecom-churn

./: MLOps Telecom Churn Prediction.txt  README.md  app.py  demo.py  pyproject.toml  requirements.txt  template.py
.github/workflows/: aws.yaml
config/: schema.yaml
notebook/: data_drift_evidently.ipynb  eda.ipynb  file_drift.html  model_training.ipynb
telecom_churn/cloud_storage/: aws_storage.py
telecom_churn/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
telecom_churn/configuration/: aws_connection.py  mongo_db_connection.py
telecom_churn/constants/: __init__.py
telecom_churn/data_access/: telecom_data.py
telecom_churn/entity/: artifact_entity.py  config_entity.py  estimator.py  s3_estimator.py
telecom_churn/exception/: __init__.py
telecom_churn/pipeline/: prediction_pipeline.py  training_pipeline.py
telecom_churn/utils/: main_utils.py
templates/: telecom.html
